Fix track color in scrollbar

--- a/src/assets/styles/base/_base.scss
+++ b/src/assets/styles/base/_base.scss
@@ -18,7 +18,7 @@ body {
 }
 
 .dark *::-webkit-scrollbar-track {
-  background-color: theme('colors.cs-dark.DEFAULT');
+  background-color: theme('colors.cs-dark.800');
 }
 
 // Scroll bar indicator
